--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 <span style="vertical-align: middle;">VLN-CE RxR (Four Views)</span>
             </h3>
             <div class="container">
-                <div id="sub-results-carousel" class="carousel2 sub-results-carousel">
+                <div id="sub-results-carousel" class="carousel sub-results-carousel">
                     <div class="item item1">
                         <video poster="" id="item1" autoplay controls muted loop playsinline height="100%">
                             <source src="./static/videos/sim_vln_4views/1013.mp4" type="video/mp4">
@@ -457,7 +457,7 @@
                 <span style="vertical-align: middle;">VLN-CE RxR (Single Front View)</span>
             </h3>
             <div class="container">
-                <div id="sub-results-carousel" class="carousel2 sub-results-carousel">
+                <div id="sub-results-carousel" class="carousel sub-results-carousel">
 
                     <div class="item item2">
                         <video autoplay controls muted loop playsinline>
@@ -502,7 +502,7 @@
             <span style="vertical-align: middle;">Tracking EVT-Bench Distracted Target (Four Views)</span>
         </h3>
         <div class="container">
-            <div id="sub-results-carousel1" class="carousel sub-results-carousel1">
+            <div id="sub-results-carousel" class="carousel sub-results-carousel">
 
                 <div class="item item1">
                     <video autoplay muted loop playsinline>
@@ -589,7 +589,7 @@
             <span style="vertical-align: middle;">ObjNav HM3D-OVON (Four Views)</span>
         </h3>
         <div class="container">
-            <div id="sub-results-carousel1" class="carousel sub-results-carousel1">
+            <div id="sub-results-carousel" class="carousel sub-results-carousel">
                 <div class="item item1">
                     <video autoplay controls muted loop playsinline>
                     <source src="./static/videos/sim_objnav_4views/4.mp4" type="video/mp4">
@@ -634,7 +634,7 @@
             <span style="vertical-align: middle;">VLN OpenUAV (Four Views)</span>
         </h3>
         <div class="container">
-        <div id="sub-results-carousel1" class="carousel sub-results-carousel1">
+        <div id="sub-results-carousel" class="carousel sub-results-carousel">
 
                 <div class="item item1">
                     <video  autoplay controls muted loop playsinline>
@@ -680,7 +680,7 @@
             <span style="vertical-align: middle;">Autonomus Driving (nuScenes, Six Views)</span>
         </h3>
         <div class="container">
-        <div id="sub-results-carousel1" class="carousel sub-results-carousel1">
+        <div id="sub-results-carousel" class="carousel sub-results-carousel">
 
                 <div class="item item1">
                     <video autoplay controls muted loop playsinline>
@@ -726,7 +726,7 @@
             <span style="vertical-align: middle;">Autonomus Driving (openScenes, Eight Views)</span>
         </h3>
         <div class="container">
-        <div id="sub-results-carousel" class="carousel2 sub-results-carousel">
+        <div id="sub-results-carousel" class="carousel sub-results-carousel">
                 <div class="item item1">
                     <video autoplay controls muted loop playsinline>
                     <source src="./static/videos/sim_openscene_8views/1.mp4" type="video/mp4">
