--- a/index.html
+++ b/index.html
@@ -413,31 +413,31 @@
             </h3>
             <div class="container">
                 <div id="sub-results-carousel" class="carousel sub-results-carousel">
-                    <div class="item item1">
+                    <div class="item_b item1">
                         <video poster="" id="item1" autoplay controls muted loop playsinline height="100%">
                             <source src="./static/videos/sim_vln_4views/1013.mp4" type="video/mp4">
                         </video>
                     </div>
 
-                    <div class="item item1">
+                    <div class="item_b item1">
                         <video poster="" id="item2" autoplay controls muted loop playsinline height="100%">
                             <source src="./static/videos/sim_vln_4views/3122.mp4" type="video/mp4">
                         </video>
                     </div>
 
-                    <div class="item item1">
+                    <div class="item_b item1">
                         <video poster="" id="item3" autoplay controls muted loop playsinline height="100%">
                             <source src="./static/videos/sim_vln_4views/10206.mp4" type="video/mp4">
                         </video>
                     </div>
 
-                    <div class="item item1">
+                    <div class="item_b item1">
                         <video poster="" id="item4" autoplay controls muted loop playsinline height="100%">
                             <source src="./static/videos/sim_vln_4views/4176.mp4" type="video/mp4">
                         </video>
                     </div>
 
-                    <div class="item item1">
+                    <div class="item_b item1">
                         <video poster="" id="item5" autoplay controls muted loop playsinline height="100%">
                             <source src="./static/videos/sim_vln_4views/8273.mp4" type="video/mp4">
                         </video>
@@ -459,31 +459,31 @@
             <div class="container">
                 <div id="sub-results-carousel" class="carousel sub-results-carousel">
 
-                    <div class="item item2">
+                    <div class="item_b item2">
                         <video autoplay controls muted loop playsinline>
                         <source src="./static/videos/sim_vln_1view/7771.mp4" type="video/mp4">
                         </video>
                     </div>
 
-                    <div class="item item2">
+                    <div class="item_b item2">
                         <video autoplay controls muted loop playsinline>
                         <source src="./static/videos/sim_vln_1view/10237.mp4" type="video/mp4">
                         </video>
                     </div>
 
-                    <div class="item item2">
+                    <div class="item_b item2">
                         <video autoplay controls muted loop playsinline>
                         <source src="./static/videos/sim_vln_1view/1674.mp4" type="video/mp4">
                         </video>
                     </div>
 
-                    <div class="item item2">
+                    <div class="item_b item2">
                         <video autoplay controls muted loop playsinline>
                         <source src="./static/videos/sim_vln_1view/3122.mp4" type="video/mp4">
                         </video>
                     </div>
 
-                    <div class="item item2">
+                    <div class="item_b item2">
                         <video autoplay controls muted loop playsinline>
                         <source src="./static/videos/sim_vln_1view/8532.mp4" type="video/mp4">
                         </video>
@@ -504,31 +504,31 @@
         <div class="container">
             <div id="sub-results-carousel" class="carousel sub-results-carousel">
 
-                <div class="item item1">
+                <div class="item_b item1">
                     <video autoplay muted loop playsinline>
                     <source src="./static/videos/sim_tracking_4views/11.mp4" type="video/mp4">
                     </video>
                 </div>
 
-                <div class="item item1">
+                <div class="item_b item1">
                     <video autoplay muted loop playsinline>
                     <source src="./static/videos/sim_tracking_4views/15.mp4" type="video/mp4">
                     </video>
                 </div>
 
-                <div class="item item1">
+                <div class="item_b item1">
                     <video autoplay muted loop playsinline>
                     <source src="./static/videos/sim_tracking_4views/16.mp4" type="video/mp4">
                     </video>
                 </div>
 
-                <div class="item item1">
+                <div class="item_b item1">
                     <video autoplay muted loop playsinline>
                     <source src="./static/videos/sim_tracking_4views/21.mp4" type="video/mp4">
                     </video>
                 </div>
 
-                <div class="item item1">
+                <div class="item_b item1">
                     <video autoplay muted loop playsinline>
                     <source src="./static/videos/sim_tracking_4views/22.mp4" type="video/mp4">
                     </video>
@@ -727,31 +727,31 @@
         </h3>
         <div class="container">
         <div id="sub-results-carousel" class="carousel sub-results-carousel">
-                <div class="item item1">
+                <div class="item_b item1">
                     <video autoplay controls muted loop playsinline>
                     <source src="./static/videos/sim_openscene_8views/0006.mp4" type="video/mp4">
                     </video>
                 </div>
 
-                <div class="item item1">
+                <div class="item_b item1">
                     <video autoplay controls muted loop playsinline>
                     <source src="./static/videos/sim_openscene_8views/0008.mp4" type="video/mp4">
                     </video>
                 </div>
 
-                <div class="item item1">
+                <div class="item_b item1">
                     <video autoplay controls muted loop playsinline>
                     <source src="./static/videos/sim_openscene_8views/0010.mp4" type="video/mp4">
                     </video>
                 </div>
 
-                <div class="item item1">
+                <div class="item_b item1">
                     <video autoplay controls muted loop playsinline>
                     <source src="./static/videos/sim_openscene_8views/0013.mp4" type="video/mp4">
                     </video>
                 </div>
 
-                <div class="item item1">
+                <div class="item_b item1">
                     <video autoplay controls muted loop playsinline>
                     <source src="./static/videos/sim_openscene_8views/0027.mp4" type="video/mp4">
                     </video>
