--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                         </h1>
                         <div class="is-size-5 publication-authors">
                             <span class="author-block">
-                                <a href="https://jzhzhang.github.io/">Jiazhao Zhang</a><sup>1, 2,</sup>*,</span> &nbsp;
+                                <a href="https://jzhzhang.github.io/">Jiazhao Zhang</a><sup>1,2,</sup>*,</span> &nbsp;
                             <span class="author-block">
-                                <a href="https://andyhandsom6.github.io/">Anqi Li</a><sup>1, 2,</sup>*,</span> &nbsp;
+                                <a href="https://andyhandsom6.github.io/">Anqi Li</a><sup>1,2,</sup>*,</span> &nbsp;
                             <span class="author-block">
                                 <a href="https://github.com/moonsbird29/">Yunpeng Qi</a><sup>3,4,</sup>*,</span> &nbsp;
                             <span class="author-block">
@@ -69,7 +69,7 @@
                             <span class="author-block">
                                 <a href="https://wsakobe.github.io/">Shaoan Wang</a><sup>1</sup>,</span> &nbsp;
                             <span class="author-block">
-                                <a href="https://github.com/lhrrhl0419">Haoran Liu</a><sup>1, 2</sup>,</span> &nbsp;
+                                <a href="https://github.com/lhrrhl0419">Haoran Liu</a><sup>1,2</sup>,</span> &nbsp;
 
                             <span class="author-block">
                                 <a href="https://gengzezhou.github.io/">Gengze Zhou</a><sup>5</sup>,</span> &nbsp;
@@ -96,10 +96,10 @@
                                 <a href="http://qi-wu.me/">Qi Wu</a><sup>5</span>, &nbsp;
 
                             <span class="author-block">
-                                <a href="https://scholar.google.com/citations?user=X7M0I8kAAAAJ&hl=en">Zhizheng Zhang</a><sup>2,†</sup></span> &nbsp;
+                                <a href="https://scholar.google.com/citations?user=X7M0I8kAAAAJ&hl=en">Zhizheng Zhang</a><sup>2,4,†</sup></span> &nbsp;
 
                             <span class="author-block">
-                                <a href="https://hughw19.github.io/">He Wang</a><sup>1, 2, †</sup></span>
+                                <a href="https://hughw19.github.io/">He Wang</a><sup>1,2,4,†</sup></span>
                         </div>
 
                         <div class="is-size-5 publication-authors">
