--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <div class="column has-text-centered">
                             <div class="publication-links">
                                 <span class="link-block">
-                                    <a href="http://arxiv.org/pdf/XXXX.XXXXX"
+                                    <a href="https://arxiv.org/abs/2509.12129"
                                         class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
                                         <span class="icon">
                                             <i class="ai ai-arxiv"></i>
